re PR c/16348 (Loop gets executed when it shouldnt)

PR c/16348
        * c-typeck.c (c_finish_loop): Don't clear cond for cond_is_first loops.

From-SVN: r84089